fix AGEL-2181 добавил переводы ключей. Вынес регулярки в отдельные переменные. Избавился от вложенностей объектов библеотек

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -308,5 +308,65 @@
   "Сумма платежа": "Payment amount",
   "Основной долг": "Principal debt",
   "Проценты": "Percentage",
-  "Остаток по кредиты": "Loan balance"
+  "Остаток по кредиты": "Loan balance",
+  "Мужской": "Male",
+  "Женский": "Female",
+  "Дата рождения": "Date of Birth",
+  "Пол": "Gender",
+  "Гражданство": "Citizenship",
+  "Российская Федерация": "Russian Federation",
+  "Беларусь": "Belarus",
+  "Украина": "Ukraine",
+  "Армения": "Armenia",
+  "Введите контактные данные": "Enter contact details",
+  "Введите ваше ФИО": "Enter your full name",
+  "Введите информацию о себе": "Enter your personal information",
+  "Введите семейное положение": "Enter marital status",
+  "Введите адрес регистрации": "Enter your registration address",
+  "Введите секретный вопрос": "Enter secret question",
+  "Введите паспортные данные": "Enter passport details",
+  "Введите ваш email": "Enter your email",
+  "Фамилия": "Last name",
+  "Имя": "First name",
+  "Отчество": "Middle name",
+  "Семейное положение": "Marital status",
+  "Дети": "Children",
+  "Никогда не состоял(-а) в браке": "Never been married",
+  "Состою в зарегистрированном браке": "In a registered marriage",
+  "Сожительство": "Cohabitation",
+  "Вдова (вдовец)": "Widow(er)",
+  "Нет детей": "No children",
+  "Страна": "Country",
+  "Район": "Region",
+  "Тип населенного пункта": "Type of settlement",
+  "Населённый пункт": "Settlement",
+  "Тип улицы": "Street type",
+  "Номер дома": "House number",
+  "Литера": "Building letter",
+  "Корпус": "Building block",
+  "Номер квартиры": "Apartment number",
+  "Почтовый индекс": "Postal code",
+  "Укажите район": "Specify the region",
+  "Вид документа": "Type of Document",
+  "Серия и номер документа": "Document Number and Series",
+  "Введите серию и номер": "Enter Series and Number",
+  "Страна выдачи документа": "Issuing Country",
+  "Орган, выдавший документ": "Issuing Authority",
+  "Введите орган, выдавший документ": "Enter Issuing Authority",
+  "Код органа, выдавшего документ": "Code of Issuing Authority",
+  "Введите код органа": "Enter Code of Authority",
+  "Дата выдачи": "Issue Date",
+  "Дата истечения срока": "Expiration Date",
+  "Паспорт гражданина РФ": "Russian Federation Passport",
+  "Свидетельство о рождении": "Birth Certificate",
+  "Общегражданский загранпаспорт": "International Passport",
+  "Паспорт моряка/удостоверение личности моряка": "Seaman's Passport/ID",
+  "Деревня": "Village",
+  "Посёлок": "Settlement",
+  "Хутор": "Farmstead",
+  "Проспект": "Avenue",
+  "Бульвар": "Boulevard",
+  "Переулок": "Lane",
+  "Буква": "Letter",
+  "Введите ответ": "Enter Answer"
 }
