--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -309,5 +309,65 @@
   "Сумма платежа": "Сумма платежа",
   "Основной долг": "Основной долг",
   "Проценты": "Проценты",
-  "Остаток по кредиты": "Остаток по кредиты"
+  "Остаток по кредиты": "Остаток по кредиты",
+  "Мужской": "Мужской",
+  "Женский": "Женский",
+  "Дата рождения": "Дата рождения",
+  "Пол": "Пол",
+  "Гражданство": "Гражданство",
+  "Российская Федерация": "Российская Федерация",
+  "Беларусь": "Беларусь",
+  "Украина": "Украина",
+  "Армения": "Армения",
+  "Введите контактные данные": "Введите контактные данные",
+  "Введите ваше ФИО": "Введите ваше ФИО",
+  "Введите информацию о себе": "Введите информацию о себе",
+  "Введите семейное положение": "Введите семейное положение",
+  "Введите адрес регистрации": "Введите адрес регистрации",
+  "Введите секретный вопрос": "Введите секретный вопрос",
+  "Введите паспортные данные": "Введите паспортные данные",
+  "Введите ваш email": "Введите ваш email",
+  "Фамилия": "Фамилия",
+  "Имя": "Имя",
+  "Отчество": "Отчество",
+  "Семейное положение": "Семейное положение",
+  "Дети": "Дети",
+  "Никогда не состоял(-а) в браке": "Никогда не состоял(-а) в браке",
+  "Состою в зарегистрированном браке": "Состою в зарегистрированном браке",
+  "Сожительство": "Сожительство",
+  "Вдова (вдовец)": "Вдова (вдовец)",
+  "Нет детей": "Нет детей",
+  "Страна": "Страна",
+  "Район": "Район",
+  "Тип населенного пункта": "Тип населенного пункта",
+  "Тип улицы": "Тип улицы",
+  "Номер дома": "Номер дома",
+  "Литера": "Литера",
+  "Корпус": "Корпус",
+  "Номер квартиры": "Номер квартиры",
+  "Почтовый индекс": "Почтовый индекс",
+  "Укажите район": "Укажите район",
+  "Населённый пункт": "Населённый пункт",
+  "Вид документа": "Вид документа",
+  "Серия и номер документа": "Серия и номер документа",
+  "Введите серию и номер": "Введите серию и номер",
+  "Страна выдачи документа": "Страна выдачи документа",
+  "Орган, выдавший документ": "Орган, выдавший документ",
+  "Введите орган, выдавший документ": "Введите орган, выдавший документ",
+  "Код органа, выдавшего документ": "Код органа, выдавшего документ",
+  "Введите код органа": "Введите код органа",
+  "Дата выдачи": "Дата выдачи",
+  "Дата истечения срока": "Дата истечения срока",
+  "Паспорт гражданина РФ": "Паспорт гражданина РФ",
+  "Свидетельство о рождении": "Свидетельство о рождении",
+  "Общегражданский загранпаспорт": "Общегражданский загранпаспорт",
+  "Паспорт моряка/удостоверение личности моряка": "Паспорт моряка/удостоверение личности моряка",
+  "Деревня": "Деревня",
+  "Посёлок": "Посёлок",
+  "Хутор": "Хутор",
+  "Проспект": "Проспект",
+  "Бульвар": "Бульвар",
+  "Переулок": "Переулок",
+  "Буква": "Буква",
+  "Введите ответ": "Введите ответ"
 }
