AGEL-2181 added field microdistrict and validate his

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -368,5 +368,10 @@
   "Бульвар": "Boulevard",
   "Переулок": "Lane",
   "Буква": "Letter",
-  "Введите ответ": "Enter Answer"
+  "Введите ответ": "Enter Answer",
+  "Центральный": "Central",
+  "Южный": "Southern",
+  "Западный": "Western",
+  "Восточный": "Eastern",
+  "Микрорайон": "Microdistrict"
 }
