--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -369,5 +369,10 @@
   "Бульвар": "Бульвар",
   "Переулок": "Переулок",
   "Буква": "Буква",
-  "Введите ответ": "Введите ответ"
+  "Введите ответ": "Введите ответ",
+  "Центральный": "Центральный",
+  "Южный": "Южный",
+  "Западный": "Западный",
+  "Восточный": "Восточный",
+  "Микрорайон": "Микрорайон"
 }
