refactor AGEL-2181 изменена схема валидации под api бекенда

--- a/src/shared/model/i18n/locales/en/en.json
+++ b/src/shared/model/i18n/locales/en/en.json
@@ -357,7 +357,7 @@
   "Введите код органа": "Enter Code of Authority",
   "Дата выдачи": "Issue Date",
   "Дата истечения срока": "Expiration Date",
-  "Паспорт гражданина РФ": "Russian Federation Passport",
+  "Паспорт": "Passport",
   "Свидетельство о рождении": "Birth Certificate",
   "Общегражданский загранпаспорт": "International Passport",
   "Паспорт моряка/удостоверение личности моряка": "Seaman's Passport/ID",
