--- a/src/shared/model/i18n/locales/ru/ru.json
+++ b/src/shared/model/i18n/locales/ru/ru.json
@@ -358,7 +358,7 @@
   "Введите код органа": "Введите код органа",
   "Дата выдачи": "Дата выдачи",
   "Дата истечения срока": "Дата истечения срока",
-  "Паспорт гражданина РФ": "Паспорт гражданина РФ",
+  "Паспорт": "Паспорт",
   "Свидетельство о рождении": "Свидетельство о рождении",
   "Общегражданский загранпаспорт": "Общегражданский загранпаспорт",
   "Паспорт моряка/удостоверение личности моряка": "Паспорт моряка/удостоверение личности моряка",
